--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pratik Dhimal</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="icon" href="https://github.com/Pratik07007/firstDraftPortfolio/blob/main/favicon.png">
+    <link rel="icon" href="https://github.com/Pratik07007/firstDraftPortfolio/blob/main/favicon.png?raw=true">
     <link rel="stylesheet" href="mediaquery.css">
 </head>
 <body>
