--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          </h1>
         </div>
         <div class="left">
-          <img src="https://github.com/Pratik07007/firstDraftPortfolio/blob/main/profile.jpg" alt="myPicture">
+          <img src="https://github.com/Pratik07007/firstDraftPortfolio/blob/main/profile.jpg?raw=true">
         </div>
     </div>
     <!-- <div class="pagetwo-footer">
